<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.meticulus.codinalteparts.app.MainActivity"
    style="@android:style/Theme.Black">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="@android:style/Holo.Light.SegmentedButton"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/avatar"
                    android:padding="5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/development_name"
                        android:id="@+id/textView"
                        android:typeface="monospace"
                        android:padding="5dp"
                        android:textSize="15dp"
			android:textColor="#FFFFFF"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/extras_section_name"
                        android:id="@+id/textView2"
                        android:typeface="monospace"
			android:textColor="#FFFFFF"
                        android:textStyle="bold|italic"
                        android:gravity="center_vertical|center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sponsor_thank_you"
                        android:id="@+id/textView3"
                        android:typeface="monospace"
                        android:padding="5dp"
			android:textColor="#FFFFFF"
                        android:textStyle="italic"
                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="10dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kernel_header"
                android:id="@+id/kernel_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
		android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="10dp"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center" />
 
	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/otg_layout"
                android:background="#444444"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otg_title"
                    android:id="@+id/switch_otg"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
		    android:textColor="#FFFFFF"
                    android:typeface="monospace"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_otg"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>
 
            <TextView
                style="@android:style/TextAppearance.DialogWindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/network_header"
                android:id="@+id/network_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
		android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center" /> 
	    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/sim2_layout"
                android:background="#444444"
                android:layout_margin="10dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sim2_title"
                    android:id="@+id/switch_sim2"
                    android:paddingBottom="20dp"
                    android:checked="false"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
		    android:textColor="#FFFFFF"
                    android:typeface="monospace"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_sim2"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:baselineAlignBottom="false" />
            </LinearLayout>

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/charger_header"
                android:id="@+id/charger_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
		android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="10dp"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/charger_show_datetime_layout"
                android:layout_margin="10dp"
                android:background="#444444">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charger_showdatetime_title"
                    android:id="@+id/switch_charger_show_datetime"
                    android:paddingBottom="20dp"
                    android:checked="true"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
		    android:textColor="#FFFFFF"
                    android:textSize="12dp"
                    android:typeface="monospace" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/what_is_charger_show_datetime"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/charger_no_suspend_layout"
                android:layout_margin="10dp"
                android:background="#444444">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charger_nosuspend_title"
                    android:id="@+id/switch_charger_no_suspend"
                    android:paddingBottom="20dp"
                    android:checked="true"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
		    android:textColor="#FFFFFF"
                    android:textSize="12dp"
                    android:typeface="monospace" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/what_is_charger_no_suspend"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <TextView
                style="@android:style/TextAppearance.DialogWindowTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/debugging_header"
                android:id="@+id/debugging_textview"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:textSize="10dp"
		android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="@android:drawable/dialog_holo_dark_frame"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/autologcat_layout"
                android:layout_margin="10dp"
                android:background="#444444">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autologcat_title"
                    android:id="@+id/switch_autologcat"
                    android:paddingBottom="20dp"
                    android:checked="true"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp"
		    android:textColor="#FFFFFF"
                    android:typeface="monospace" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_autologcat"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/autokmsg_layout"
                android:layout_margin="10dp"
                android:background="#444444">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autokmsg_title"
                    android:id="@+id/switch_autokmsg"
                    android:paddingBottom="20dp"
                    android:checked="true"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp"
		    android:textColor="#FFFFFF"
                    android:typeface="monospace" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_autokmsg"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:weightSum="1"
                android:id="@+id/autoril_layout"
                android:layout_margin="10dp"
                android:background="#444444">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoril_title"
                    android:id="@+id/switch_autorillog"
                    android:paddingBottom="20dp"
                    android:checked="true"
                    android:enabled="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="0dp"
                    android:focusableInTouchMode="false"
                    android:layout_weight="0.99"
                    android:paddingTop="20dp"
                    android:textSize="12dp"
		    android:textColor="#FFFFFF"
                    android:typeface="monospace" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/whatis_autorillog"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:paddingLeft="10dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
